# sonarqube-test

./: main.py  pyproject.toml  sonar-project.properties
