[project]
name = "sonarqube-coverage-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.6.12",
    "flask>=3.1.0",
    "numpy>=2.2.3",
    "pytest>=8.3.5",
]

[tool.ruff]
fix = true
show-fixes = true
output-format = "grouped"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle error
    "F", # pyflakes
    "UP", # pyupgrade
    "W", # pycodestyle warning
    "N", # pep8-naming
    "S", # bandit
    "A", # flake8-builtins
    # "COM", # flake8-commas
    "T10", # flake8-debugger
    "T20", # flake8-print
    "FURB", # refurb
    #"LOG", # flake8-logging
    #"G", # flake8-logging-format
]
ignore = ["S101"]

[tool.ruff.lint.isort]
order-by-type = false

[dependency-groups]
dev = [
    "basedpyright>=1.28.0",
]

